ubench benchmark for event binning overheads

--- a/tests/ubench/CMakeLists.txt
+++ b/tests/ubench/CMakeLists.txt
@@ -5,6 +5,7 @@ include(ExternalProject)
 set(bench_sources
     accumulate_functor_values.cpp
     event_setup.cpp
+    event_binning.cpp
 )
 
 set(bench_sources_cuda
