--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -35,7 +35,7 @@ set(TEST_SOURCES
     test_algorithms.cpp
     test_any.cpp
     test_backend.cpp
-    test_brunel_network.cpp
+    # test_brunel_network.cpp
     test_double_buffer.cpp
     test_cell.cpp
     test_compartments.cpp
@@ -63,8 +63,9 @@ set(TEST_SOURCES
     test_path.cpp
     test_point.cpp
     test_probe.cpp
-    test_pss_cell_group.cpp
+    # test_pss_cell_group.cpp
     test_segment.cpp
+    test_random123.cpp
     test_range.cpp
     test_rss_cell.cpp
     test_span.cpp
