add reproduceable ordering, unit tests, event injection

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -54,6 +54,7 @@ set(TEST_SOURCES
     test_math.cpp
     test_matrix.cpp
     test_mechanisms.cpp
+    test_merge_events.cpp
     test_multi_event_stream.cpp
     test_nop.cpp
     test_optional.cpp
