--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ set(BASE_SOURCES
     util/debug.cpp
     util/hostname.cpp
     util/path.cpp
+    util/prefixbuf.cpp
     util/unwind.cpp
 )
 set(CUDA_SOURCES
