add ubench for k-way merge of sorted lists

--- a/tests/ubench/CMakeLists.txt
+++ b/tests/ubench/CMakeLists.txt
@@ -6,6 +6,7 @@ set(bench_sources
     accumulate_functor_values.cpp
     event_setup.cpp
     event_binning.cpp
+    kway_merge.cpp
 )
 
 set(bench_sources_cuda
