First implementation with green light on test. Ready for optimization.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -61,6 +61,7 @@ set(TEST_SOURCES
     test_mechinfo.cpp
     test_partition.cpp
     test_path.cpp
+    test_pi_cell.cpp
     test_point.cpp
     test_prefixbuf.cpp
     test_probe.cpp
