--- a/tests/modcc/CMakeLists.txt
+++ b/tests/modcc/CMakeLists.txt
@@ -6,7 +6,7 @@ set(MODCC_TEST_SOURCES
     test_msparse.cpp
     test_optimization.cpp
     test_parser.cpp
-    #test_printers.cpp
+    test_printers.cpp
     test_removelocals.cpp
     test_symdiff.cpp
     test_symge.cpp
