Address PR comments.
* Replace 'render' with 'emit' where applicable.
* Add test for 'a- -b' expression, ensuring space is preserved.

--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(MODCC_SOURCES
     astmanip.cpp
-    cexpr_render.cpp
+    cexpr_emit.cpp
     constantfolder.cpp
     cprinter.cpp
     cudaprinter.cpp
