--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -36,7 +36,6 @@ set(TEST_SOURCES
     test_algorithms.cpp
     test_any.cpp
     test_backend.cpp
-    # test_brunel_network.cpp
     test_double_buffer.cpp
     test_cell.cpp
     test_compartments.cpp
@@ -49,7 +48,7 @@ set(TEST_SOURCES
     test_event_binner.cpp
     test_filter.cpp
     test_fvm_multi.cpp
-    # test_lif_cell_group.cpp
+    test_lif_cell_group.cpp
     test_mc_cell_group.cpp
     test_lexcmp.cpp
     test_mask_stream.cpp
@@ -66,7 +65,6 @@ set(TEST_SOURCES
     test_point.cpp
     test_prefixbuf.cpp
     test_probe.cpp
-    # test_pss_cell_group.cpp
     test_segment.cpp
     test_random123.cpp
     test_range.cpp
