--- a/python/miniapp/src/CMakeLists.txt
+++ b/python/miniapp/src/CMakeLists.txt
@@ -14,13 +14,13 @@ set_source_files_properties(
 # Multi-file cython modules do not appear to be working at the moment.
 cython_add_module( pyarbor_miniapp ${MINIAPP_SOURCES} pyarbor_miniapp.pyx )
 
-#target_link_libraries(miniapp.exe LINK_PUBLIC ${ARB_LIBRARIES})
-#target_link_libraries(miniapp.exe LINK_PUBLIC ${EXTERNAL_LIBRARIES})
+target_link_libraries(pyarbor_miniapp LINK_PUBLIC ${ARB_LIBRARIES})
+target_link_libraries(pyarbor_miniapp LINK_PUBLIC ${EXTERNAL_LIBRARIES})
 
-#if(ARB_WITH_MPI)
-#    target_link_libraries(miniapp.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
-#    set_property(TARGET miniapp.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-#endif()
+if(ARB_WITH_MPI)
+    target_link_libraries(pyarbor_miniapp LINK_PUBLIC ${MPI_C_LIBRARIES})
+    set_property(TARGET pyarbor_miniapp APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
+endif()
 
 #set_target_properties(
 #    miniapp.exe
