compiling with scikit cython cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,7 +276,7 @@ include_directories(
     "${PROJECT_SOURCE_DIR}/tclap"
     "${PROJECT_SOURCE_DIR}/include"
     "${PROJECT_SOURCE_DIR}/src"
-    "${PROJECT_SOURCE_DIR}/miniapp"
+    "${PROJECT_SOURCE_DIR}/miniapps"
     "${PROJECT_SOURCE_DIR}/modcc"
     "${PROJECT_SOURCE_DIR}")
 if(EXTERNAL_INCLUDES)
