--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -18,7 +18,7 @@ build_modules(
 # Unit test sources
 
 set(TEST_CUDA_SOURCES
-    test_atomics.cu
+    test_intrin.cu
     test_mc_cell_group.cu
     test_gpu_stack.cu
     test_matrix.cu
