--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "doc/rtd_theme"]
 	path = doc/rtd_theme
 	url = https://github.com/rtfd/sphinx_rtd_theme.git
+[submodule "python/pybind11"]
+	path = python/pybind11
+	url = https://github.com/pybind/pybind11.git
