python wrap meters and partial wrap of recipe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,6 +233,9 @@ set(use_python OFF)
 if(ARB_WITH_PYTHON)
     set(use_python ON)
     add_definitions(-DARB_HAVE_PYTHON)
+    # Required to link the dynamic libraries for python modules.
+    # Effectively adds '-fpic' flag to CXX_FLAGS.
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif()
 
 #----------------------------------------------------------
