Add mechanism catalogue unit tests.
* Fix bug in mechanism_catalogue::remove.
* Consistently rename fvm_multi to fvm_lowered across unit test.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -49,7 +49,7 @@ set(TEST_SOURCES
     test_event_queue.cpp
     test_filter.cpp
     test_fvm_layout.cpp
-    test_fvm_multi.cpp
+    test_fvm_lowered.cpp
     test_mc_cell_group.cpp
     test_lexcmp.cpp
     test_maputil.cpp
@@ -57,6 +57,7 @@ set(TEST_SOURCES
     test_math.cpp
     test_matrix.cpp
     test_mechanisms.cpp
+    test_mechcat.cpp
     test_merge_events.cpp
     test_multi_event_stream.cpp
     test_nop.cpp
