--- a/example/miniapp/brunel/CMakeLists.txt
+++ b/example/miniapp/brunel/CMakeLists.txt
@@ -17,5 +17,5 @@ endif()
 
 set_target_properties(brunel_miniapp.exe
    PROPERTIES
-   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/miniapp/brunel"
+   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/example/miniapp/brunel"
 )
