clean up error handling of git submodule in cmake

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,10 +1,6 @@
-include("${CMAKE_SOURCE_DIR}/cmake/GitSubmodule.cmake")
-
 # Set up rtd theme as an external project.
-set(rtdtheme_src_dir "${CMAKE_CURRENT_SOURCE_DIR}/rtd_theme")
-
-find_package(Git)
-git_submodule(ReadTheDocs "${rtdtheme_src_dir}")
+include(GitSubmodule)
+git_submodule(read_the_docs "${CMAKE_CURRENT_SOURCE_DIR}/rtd_theme")
 
 # a static path is required to avoid warning messages from sphinx-build
 file(MAKE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/static")
@@ -12,10 +8,19 @@ file(MAKE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/static")
 # configure target for the sphinx-generated html docs
 find_package(Sphinx)
 
+set(error_msg "Error:")
+if (NOT SPHINX_FOUND)
+    set(error_msg "${error_msg} Sphinx must be installed to build documentation.")
+endif()
+if (NOT read_the_docs_AVAIL))
+    set(error_msg "${error_msg} The git submodule for read the docs in ${CMAKE_CURRENT_SOURCE_DIR}/rdt_theme needs to be checked out.")
+endif()
+
+
 set(DOCS_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/html")
 set(DOCS_DOC_TREE_DIR "${CMAKE_CURRENT_BINARY_DIR}/_doctrees")
 set(DOCS_TARGET_NAME docs)
-if (SPHINX_FOUND)
+if (SPHINX_FOUND AND read_the_docs_AVAIL)
     add_custom_target( ${DOCS_TARGET_NAME}
         COMMAND
             ${SPHINX_EXECUTABLE}
@@ -29,7 +34,7 @@ if (SPHINX_FOUND)
 else()
     add_custom_target( ${DOCS_TARGET_NAME}
         COMMAND
-            echo "Error: Sphinx must be installed to build documentation."
+            echo "${error_msg}"
         COMMAND
             exit 1  # return error code to let CMake know that the build proccess should fail
         COMMENT
@@ -38,5 +43,3 @@ endif()
 
 # remove generated documentation when make clean is run
 set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${DOCS_BUILD_DIR}")
-
-unset(git_failed)
