--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,17 @@ elseif(ARB_VECTORIZE_TARGET STREQUAL "AVX512")
 endif()
 
 #----------------------------------------------------------
+# Python bindings
+#----------------------------------------------------------
+option(ARB_WITH_PYTHON "enable python front end" OFF)
+if(ARB_WITH_PYTHON)
+    add_definitions(-DARB_HAVE_PYTHON)
+    # Required to link the dynamic libraries for python modules.
+    # Effectively adds '-fpic' flag to CXX_FLAGS.
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
+
+#----------------------------------------------------------
 # Only build modcc if it has not already been installed.
 # This is useful if cross compiling for KNL, when it is not desirable to compile
 # modcc with the same flags that are used for the KNL target.
@@ -297,3 +308,6 @@ add_subdirectory(tests)
 add_subdirectory(example)
 add_subdirectory(lmorpho)
 add_subdirectory(doc)
+if (ARB_WITH_PYTHON)
+    add_subdirectory(python)
+endif ()
