--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "doc/rtd_theme"]
 	path = doc/rtd_theme
 	url = https://github.com/rtfd/sphinx_rtd_theme.git
+[submodule "tbb"]
+	path = tbb
+	url = https://github.com/wjakob/tbb.git
