Lib order workaround, patch examples.

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -57,6 +57,10 @@ if (ARB_AUTO_RUN_MODCC_ON_CHANGES)
     add_dependencies(arbormech build_all_mods)
 endif()
 
+# Until we merge our myriad static libraries, we prepend mech libs, and also append CPU mech lib
+# which holds the generated default catalogue code.
+
+list(INSERT ARB_LIBRARIES 0 arbormech)
 list(APPEND ARB_LIBRARIES arbormech)
 
 if(ARB_WITH_CUDA)
@@ -73,7 +77,7 @@ if(ARB_WITH_CUDA)
         add_dependencies(arbormechcu build_all_gpu_mods)
     endif()
 
-    list(APPEND ARB_LIBRARIES arbormechcu)
+    list(INSERT ARB_LIBRARIES 0 arbormechcu)
 endif()
 
 set(ARB_LIBRARIES "${ARB_LIBRARIES}" PARENT_SCOPE)
